<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:scrollbars="vertical"
    tools:context=".ui.main.MainActivity">


    <TextView
        android:id="@+id/activity_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/text_mainactivity"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/text_name"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_name">

            <ImageButton
                android:id="@+id/button_launch_dialog"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginTop="28dp"
                android:contentDescription="@string/text_launch_dialog"
                android:elevation="12dp"
                android:src="@drawable/ic_dialog"
                app:layout_constraintEnd_toStartOf="@+id/button_fragments"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/button_camera"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginVertical="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/camera"
                android:elevation="12dp"
                android:src="@drawable/ic_camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_register_activity"
                app:layout_constraintTop_toBottomOf="@+id/button_gallery" />

            <ImageButton
                android:id="@+id/button_gallery"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginVertical="16dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/gallery"
                android:elevation="12dp"
                android:src="@drawable/ic_gallery_uno"
                app:layout_constraintBottom_toTopOf="@+id/button_camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_launch_dialog" />

            <ImageButton
                android:id="@+id/button_register_activity"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:contentDescription="@string/register"
                android:elevation="12dp"
                android:src="@drawable/ic_register"
                app:layout_constraintBottom_toBottomOf="@+id/button_camera"
                app:layout_constraintEnd_toStartOf="@+id/button_camera"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button_camera" />

            <ImageButton
                android:id="@+id/button_fragments"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/movies"
                android:elevation="12dp"
                android:src="@drawable/ic_movies"
                app:layout_constraintBottom_toBottomOf="@+id/button_launch_dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_launch_dialog"
                app:layout_constraintTop_toTopOf="@+id/button_launch_dialog"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>